force-app/main/default/objects/Current_Month__c/Current_Month__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Allows the Daily Comparatives Current Month to be set to a past month for testing purposes</description>
    <label>Current Month</label>
</CustomObject>