force-app/main/default/objects/Current_Month__c/fields/Delivery_Month__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Month__c</fullName>
    <defaultValue>-1</defaultValue>
    <label>Current Delivery Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>