force-app/main/default/objects/Current_Month__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>Current month number</description>
    <label>Current Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>