force-app/main/default/objects/Current_Month__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <defaultValue>2016</defaultValue>
    <label>Current Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>